remaining fixes for responsiveness. centered circle div elements. changed hero image max width to align better with header text. revised styles to accomodate mobile devices in the header view more smoothly. fixed header text centering in mobile devices. kept the style that removes logo display on small mobile views.

--- a/project1/bootstrap/css/main.css
+++ b/project1/bootstrap/css/main.css
@@ -9,32 +9,6 @@
 	font-family: 'Raleway', sans-serif;
 	font-weight: 400;
 	color: #003333;
-
-}
-
-@media only screen and (max-width: 768px) and (orientation : portrait){
-	.logo, hr {
-		display: none;
-	}
-
-	.name, .title, h2, h4 {
-		text-align: center;
-	}
-
-	#circle {
-		margin: 0 auto;
-	}
-
-	.body, .credit {
-		text-align: center;
-	}
-}
-
-@media only screen and (max-width: 450px) {
-
-	.name {
-		font-size: 40px;
-	}
 }
 
 .center {
@@ -42,11 +16,14 @@
 }
 
 .hero {
-	padding: 30px 0;
+	padding: 20px 0;
+	max-width: 100%;
+	height: auto;
+	width: 100%;
 }
 
 .logo {
-	padding: 15px 0;
+	padding-top: 15px;
 }
 
 hr {
@@ -126,4 +103,23 @@ a:hover {
 
 a:active {
 	text-decoration: underline;
+}
+
+@media only screen and (max-width: 768px) {
+
+	.logo, hr {
+		display: none;
+	}
+
+	.name, .title, h2, h4 {
+		text-align: center;
+	}
+
+	.name {
+		font-size: 40px;
+	}
+
+	.body, .credit {
+		text-align: center;
+	}
 }
